--- a/.github/workflows/ci-cd-learning.yml
+++ b/.github/workflows/ci-cd-learning.yml
@@ -3,10 +3,19 @@ name: CI-CD Workflow
 on: push
 
 jobs:
-  hello-world-job:
-
+  build:
    runs-on: windows-latest
    steps:
      - name: Checkout repo
        uses: actions/checkout@v4
-     - run: echo "Workflow triggerred"
+     - run: echo "Code Checked out"
+     - name: Setup Python
+       uses: actions/setup-python@v5
+       with:
+        python-version: '3.13' # Specify the desired Python version
+        cache: 'pip' # Optional: Caches pip dependencies for faster subsequent runs
+     
+     - run:  python -m pip install 
+     - run: pip install build
+     - run: python -m build
+     
